[gd_scene load_steps=30 format=2]

[ext_resource path="res://Recursos/IconoMenuDesplegable9.png" type="Texture" id=1]
[ext_resource path="res://Pantallas/PantallaEstudiante.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Montserrat-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Recursos/Montserrat-SemiBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Recursos/Montserrat-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="Animation" id=5]
resource_name = "despliegue_menu_lateral"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PanelLateral:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 524 ), Vector2( 258, 524 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PanelLateral/VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PanelLateral/VBoxContainer:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.12, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 66, 130 ), Vector2( 254, 130 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PanelLateral/ButtonSalir:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PanelLateral/ButtonSalir:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.12, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 66, 40 ), Vector2( 254, 40 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "repliegue_menu_lateral"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PanelLateral:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 258, 524 ), Vector2( 0, 524 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PanelLateral/VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.18 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PanelLateral/VBoxContainer:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.18 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 254, 130 ), Vector2( 66, 130 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PanelLateral/ButtonSalir:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.18 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PanelLateral/ButtonSalir:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.18 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 254, 40 ), Vector2( 66, 40 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.945098, 0.909804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.196078, 0.211765, 0.980392, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.945098, 0.909804, 1 )
border_width_left = 6
border_width_top = 4
border_width_right = 4
border_width_bottom = 2
border_color = Color( 0.254902, 0.223529, 0.223529, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.945098, 0.909804, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.184314, 0.823529, 1, 1 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.0666667, 0.376471, 0.439216, 0.823529 )

[sub_resource type="DynamicFont" id=23]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.054902, 0.294118, 0.341176, 0.823529 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.0392157, 0.211765, 0.25098, 0.823529 )
border_width_left = 5
border_width_top = 6
border_width_right = 5
border_width_bottom = 3
border_color = Color( 0.0666667, 0.376471, 0.439216, 0.823529 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0666667, 0.376471, 0.439216, 0.823529 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.054902, 0.294118, 0.341176, 0.823529 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.0392157, 0.211765, 0.25098, 0.823529 )
border_width_left = 5
border_width_top = 6
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.054902, 0.294118, 0.341176, 0.823529 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0666667, 0.376471, 0.439216, 0.823529 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.0392157, 0.211765, 0.25098, 0.823529 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.0392157, 0.211765, 0.25098, 0.823529 )
border_width_left = 5
border_width_top = 6
border_width_right = 5
border_width_bottom = 3
border_color = Color( 0.054902, 0.294118, 0.341176, 0.823529 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.0666667, 0.376471, 0.439216, 0.823529 )

[sub_resource type="DynamicFont" id=24]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.670588, 0.121569, 0.121569, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.670588, 0.121569, 0.121569, 1 )
border_width_left = 5
border_width_top = 6
border_width_right = 5
border_width_bottom = 3
border_color = Color( 0.968627, 0.160784, 0.160784, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.827451, 0.141176, 0.141176, 1 )

[node name="PantallaEstudiante" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRectFondo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.184314, 0.823529, 1, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/despliegue_menu_lateral = SubResource( 5 )
anims/repliegue_menu_lateral = SubResource( 6 )

[node name="PanelSuperior" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 76.0
custom_styles/panel = SubResource( 4 )

[node name="ButtonMenuDesplegable" type="Button" parent="PanelSuperior"]
margin_left = 13.0
margin_top = 4.0
margin_right = 89.0
margin_bottom = 74.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 1 )
icon_align = 1

[node name="LabelEPT" type="Label" parent="PanelSuperior"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -226.5
margin_top = 15.0
margin_right = 226.5
margin_bottom = 58.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Educar para transformar"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="PanelSuperior"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
margin_top = 74.0
margin_bottom = 78.0

[node name="PanelBienvenida" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = -224.0
margin_right = 511.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 8 )

[node name="LabelBienvenida" type="Label" parent="PanelBienvenida"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -49.0
margin_right = 260.0
margin_bottom = -11.0
custom_fonts/font = SubResource( 9 )
text = "Bienvenido, @Nombre @Apellido"
align = 1
valign = 1

[node name="PanelHorarios" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = -224.0
margin_right = 511.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 8 )

[node name="LabelHorarios" type="Label" parent="PanelHorarios"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.5
margin_top = -49.0
margin_right = 194.5
margin_bottom = -11.0
custom_fonts/font = SubResource( 9 )
text = "Tus horarios estarán aquí"
align = 1
valign = 1

[node name="PanelNotas" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = -224.0
margin_right = 511.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 8 )

[node name="LabelNotas" type="Label" parent="PanelNotas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_top = -49.0
margin_right = 174.0
margin_bottom = -11.0
custom_fonts/font = SubResource( 9 )
text = "Tus notas estarán aquí"
align = 1
valign = 1

[node name="PanelAsistencia" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = -224.0
margin_right = 511.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 8 )

[node name="LabelAsistencia" type="Label" parent="PanelAsistencia"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = -49.0
margin_right = 173.0
margin_bottom = -9.0
custom_fonts/font = SubResource( 9 )
text = "Tus faltas estarán aquí"
align = 1
valign = 1

[node name="PanelLateral" type="Panel" parent="."]
anchor_bottom = 1.0
margin_top = 76.0
margin_bottom = -480.0
custom_styles/panel = SubResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelLateral"]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 103.0
margin_bottom = 132.0
custom_constants/separation = 5

[node name="ButtonHorarios" type="Button" parent="PanelLateral/VBoxContainer"]
margin_right = 101.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 23 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 19 )
custom_styles/normal = SubResource( 10 )
text = " Horarios"
align = 0

[node name="ButtonNotas" type="Button" parent="PanelLateral/VBoxContainer"]
margin_top = 45.0
margin_right = 101.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 23 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 20 )
custom_styles/normal = SubResource( 12 )
text = " Notas"
align = 0

[node name="ButtonAsistencia" type="Button" parent="PanelLateral/VBoxContainer"]
margin_top = 90.0
margin_right = 101.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.996078, 0.996078, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 23 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 21 )
custom_styles/normal = SubResource( 13 )
text = " Asistencia"
align = 0

[node name="ButtonSalir" type="Button" parent="PanelLateral"]
visible = false
margin_left = 2.0
margin_top = 477.0
margin_right = 102.182
margin_bottom = 517.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 24 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 22 )
custom_styles/normal = SubResource( 14 )
text = "Salir"

[connection signal="pressed" from="PanelSuperior/ButtonMenuDesplegable" to="." method="_on_ButtonMenuDesplegable_pressed"]
[connection signal="pressed" from="PanelLateral/VBoxContainer/ButtonHorarios" to="." method="_on_ButtonHorarios_pressed"]
[connection signal="pressed" from="PanelLateral/VBoxContainer/ButtonNotas" to="." method="_on_ButtonNotas_pressed"]
[connection signal="pressed" from="PanelLateral/VBoxContainer/ButtonAsistencia" to="." method="_on_ButtonAsistencia_pressed"]
